实现天气查询工具类，并重构了实现类、